# prempage-v2

./: .dockerignore  .env.defaults  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.frontend  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: pre-push
backend/: .env.example  Dockerfile  README.md  export_openapi.py  main.py  openapi.json  pyproject.toml  schemas.py
backend/app/: __init__.py  errors.py
backend/app/ai/: base.py  debug.py
backend/app/ai/providers/: openai.py
backend/app/core/: __init__.py  config.py  error_handlers.py  lifespan.py  logging.py
backend/app/models/: overlay.py  system.py
backend/app/routes/: __init__.py  health.py  overlay.py  palette.py  sections.py
backend/app/services/: __init__.py  overlay.py
backend/app/templates/horizon/: models.py  sections.py  service.py
backend/tests/: conftest.py  test_ai_openai.py  test_routes_overlay.py  test_routes_palette.py  test_routes_sections.py  test_services_overlay.py  test_templates_horizon_sections.py
services/form-relay/: .env.example  Dockerfile  README.md  allowed-origins.json  pyproject.toml
services/form-relay/app/: __init__.py  application.py  config.py  logging.py  main.py  schemas.py  telemetry.py
services/form-relay/app/clients/: __init__.py  salon.py
services/static-site-extractor/: Dockerfile  README.md  pyproject.toml
services/static-site-extractor/app/: config.py  extractor.py  main.py  models.py
services/static-site-extractor/samples/: drmichellealvarez.com.json  westneurobehavioral.com.json  willowholisticcenter.com.json  www.robinbaynelcsw.com.json
services/static-site-extractor/tests/: test_extractor.py
(+319 files in other folders)
