[project]
name = "static-site-extractor"
version = "0.1.0"
description = "Extract text, font URLs, and image URLs from static web pages"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.2",
    "loguru>=0.7.3",
    "uvicorn[standard]>=0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "app",
    "pyproject.toml",
    "README.md",
]
